# hyrax_bls381

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  run.sh
lib/: libmcl.so.1  libmcl.so.1.74  libmclbn256.so.1  libmclbn256.so.1.74  libmclbn384.so.1  libmclbn384.so.1.74  libmclbn384_256.so.1  libmclbn384_256.so.1.74
src/: CMakeLists.txt  Makefile  cmake_install.cmake  hyrax  hyrax.cpp  hyrax.hpp  hyrax_  hyrax_time  main.cpp  polyVerifier.cpp  timer.cpp  timer.hpp  typedef.hpp
